# reconstruction_program

./: .gitignore  CMakeLists.txt  README.md  classmap.uml  config  config2  config3
code/: #CRegistration.cpp#  CBaseDisplay.h  CContour.cpp  CContour.h  CContourDisplay.cpp  CContourDisplay.h  CContourSetDisplay.h  CCorespond.cpp  CCorespond.h  CCorespondDisplay.cpp  CCorespondDisplay.h  CFileDebug.cpp  CFileDebug.h  CLayer.cpp  CLayer.h  CLineSetDisplay.cpp  CLineSetDisplay.h  CMap.cpp  CMap.h  CMedialMap.cpp  CMedialMap.h  CNormalContour.h  COriginContour.h  CPoint.cpp  CPoint.h  CRegistration.cpp  CRegistration.h  CShape.cpp  CShape.h  CShapeDisplay.cpp  CShapeDisplay.h  CSkeleton.cpp  CSkeleton.h  CSkeletonDisplay.cpp  CSkeletonDisplay.h  CTransformedContour.h  CTriangle.cpp  CTriangle.h  CTriangleDisplay.cpp  CTriangleDisplay.h  (+11 more)
layer/: WBPETCT3D  WBPETCT3D_new  WBPETCT3D_new_1  WBPETCT3D_new_15_16  WBPETCT3D_new_16_17  WBPETCT3D_new_17_18  WBPETCT3D_new_17_18_t  WBPETCT3D_new_19_20  WBPETCT3D_new_20_21  WBPETCT3D_new_20_22  WBPETCT3D_new_21_22  WBPETCT3D_new_2_3  body  hrt_bi00.txt  hrt_fu00.txt  layer_151  layer_152  layer_20  layer_20_new  layer_21  layer_21_new  sourceCont  synthetic  synthetic2  synthetic3  synthetic4  targetCont
layer/result/: body_points.vtk
